nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: carl
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
        - name: nginx-data
          mountPath: /usr/share/nginx/html
          subPath: "nginx"
      volumes:
      - name: nginx-data
        persistentVolumeClaim:
          claimName: nginx-pvc
      - name: config
        configMap:
          name: nginx-config
