nginx/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: carl
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 80
